# zangalewa

./: .agw.json  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  rust-toolchain.toml  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: default.toml  default.yaml  development.toml  development.yaml  production.toml  production.yaml
crates/ai-integration/: Cargo.toml
crates/atomic-scheduler/: Cargo.toml
crates/config-manager/: Cargo.toml
crates/consciousness-core/: Cargo.toml
crates/consciousness-core/src/: agency.rs  consciousness.rs  fire_adaptation.rs  lib.rs  validation.rs
crates/domain-bridge/: Cargo.toml
crates/task-coordinator/: Cargo.toml
docs/: getting_started.md  implementation.md  tasks.md
docs/api/: core.md
docs/theory/: buhera-north.tex  faster-than-light.tex  large-language-models.tex  phenomonology.tex  pugachev-cobra.tex  purpose.tex  self-aware-algorithms.tex
examples/: basic_test.py  smart_cli_assistant.py
examples/config_examples/: custom_config.yaml
examples/workflow_examples/: basic_usage.py
pugachev-cobra/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json
pugachev-cobra/src/: extension.ts
pugachev-cobra/src/core/: ConsciousnessValidator.ts  FiniteObserverEngine.ts  IntentValidationEngine.ts  MetaKnowledgeProcessor.ts  ProblemContextManager.ts  RidiculousSolutionGenerator.ts  SubtaskRidiculousGenerator.ts  SystematicBiasGenerator.ts  TaskDecomposer.ts  TerminationCriteria.ts
pugachev-cobra/src/core/processors/: FactualAccuracyProcessor.ts  GenericProcessor.ts  ToneAnalysisProcessor.ts
pugachev-cobra/src/orchestrator/: DynamicPromptGenerator.ts  EightStagePipeline.ts  MetacognitiveOrchestrator.ts  ProcessMonitor.ts  WorkingMemorySystem.ts
pugachev-cobra/src/providers/: ValidationDiagnosticsProvider.ts
pugachev-cobra/src/types/: ValidationTypes.ts
pugachev-copilot/: package.json
scripts/: setup-dev.sh
src/: main.rs
tests/: README.md  conftest.py
tests/test_meta/: test_context.py
zangalewa/: __init__.py
zangalewa/cli/: __init__.py  app.py  model_setup_cmd.py  package_monitor.py
zangalewa/cli/commands/: auto_fix_cmd.py  error_cmd.py
zangalewa/cli/ui/: error_display.py  styles.py
zangalewa/core/: __init__.py  assistant.py  error_resolver.py
zangalewa/core/analyzer/: __init__.py  documenter.py  metrics.py  parser.py
zangalewa/core/errors/: __init__.py  auto_resolver.py  detector.py  resolver.py  search.py
zangalewa/core/executor/: __init__.py  command.py
zangalewa/core/knowledge/: __init__.py  embeddings.py  query.py  store.py
zangalewa/core/llm/: __init__.py  adapters.py  manager.py
zangalewa/core/llm/prompts/: __init__.py  default.txt
zangalewa/meta/: __init__.py  context.py
zangalewa/utils/: __init__.py  config.py  hf_api.py  logging.py  model_setup.py
zoom-climb/: .env.local.example  .gitignore  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
zoom-climb/docs/: buhera-os-int.md
zoom-climb/docs/epistemology/: buhera-os-integration.tex  epistemological-method.tex  finite-agent-coordination.tex  instantiation-of-finite-weighted-graphs.tex  knowledge-thermodynamics.tex  operational-intelligence.tex  semantic-categorical-orchestra.tex  semantic-causal-propagator.tex  synchronised-agent-coordination.tex  unconstrained-subtask-computing.tex  unconstrained-subtask-recursion.tex
zoom-climb/docs/publications/blank-screen-paradigm/: blank-screen-interceptor.aux  blank-screen-interceptor.bbl  blank-screen-interceptor.blg  blank-screen-interceptor.out  blank-screen-interceptor.tex  references.bib
zoom-climb/docs/publications/blank-screen-paradigm/figures/: blank-screen-captions.tex
zoom-climb/docs/publications/hierarchical-specialist-cascades/: hierarchical-navigation-cascades.aux  hierarchical-navigation-cascades.bbl  hierarchical-navigation-cascades.blg  hierarchical-navigation-cascades.out  hierarchical-navigation-cascades.tex  references.bib
zoom-climb/docs/publications/hierarchical-specialist-cascades/figures/: cascade-captions.tex
zoom-climb/docs/publications/sufficient-interceptor/: minimum-sufficient-interceptor.aux  minimum-sufficient-interceptor.bbl  minimum-sufficient-interceptor.blg  minimum-sufficient-interceptor.out  minimum-sufficient-interceptor.tex  references.bib
zoom-climb/docs/publications/sufficient-interceptor/figures/: sufficient-captions.tex
zoom-climb/docs/publications/validation/: build_summary.py  generate_panels.py  summary.json
zoom-climb/docs/publications/validation/paper1-msi/: _paper1_summary.json  exp1_sufficiency_saturation.json  exp2_scale_invariance.json  exp3_session_trajectory_benefit.json  exp4_focus_arbitration.json  run_experiments.py
zoom-climb/docs/publications/validation/paper2-hnc/: _paper2_summary.json  exp1_sublinear_latency.json  exp2_router_capacity_sufficiency.json  (+4 more)
zoom-climb/docs/shader/: categorical-compound-database.tex  gpu-observation-architecture.tex  spectroscopic-derivation.tex
zoom-climb/docs/sources/: backward-navigation.tex  blank-screen-integration.tex  blank-screen-interceptor.tex  buhera-operating-system.tex  buhera-os-architecture.tex  high-velocity-intent-decomposition.tex  integration.md  purpose-model-factory.tex  trajectory-completion.tex  vaHera-categorical-scripting.tex
zoom-climb/src/components/blank-surface/: BlankSurface.tsx  state-machine.ts
zoom-climb/src/components/desk/: DeskDashboard.tsx  ErrorBoundary.tsx  transform.ts  useDCChart.ts
zoom-climb/src/components/render-leaves/: chem.tsx  imaging.tsx  registry.ts  research.tsx  spec.tsx  types.ts
zoom-climb/src/lib/: coord-extract.ts  prompt.ts
zoom-climb/src/lib/desk/: cache.ts  coord.ts  github.ts  huggingface.ts  types.ts
zoom-climb/src/pages/: _app.tsx  desk.tsx  hieronymus.tsx  honjo.tsx  index.tsx  shakespear.tsx
zoom-climb/src/pages/api/: extract.ts
zoom-climb/src/styles/: globals.css
zoom-climb/src/types/: dc.d.ts
(+8 files in other folders)
