[package]
name = "ai-integration"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "AI provider integration with consciousness enhancement"
license = "MIT"

[dependencies]
# Core async and utilities
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Rate limiting and circuit breaker
governor = "0.6"
circuit-breaker = "0.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }

# Workspace dependencies
consciousness-core = { path = "../consciousness-core" }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.12"

[features]
default = ["huggingface"]
huggingface = []
openai = []
anthropic = []
all-providers = ["huggingface", "openai", "anthropic"]
consciousness-enhancement = []
